--- a/project.ipynb
+++ b/project.ipynb
@@ -3451,9 +3451,9 @@
     "        fe_features[name] = features\n",
     "        fe_labels[name] = labels\n",
     "    return fe_features, fe_labels\n",
-    "fe_2_features, fe_2_labels = feature_engineer_2(datasets)\n",
-    "for name, dataset in fe_2_features.items():\n",
-    "    display(dataset)"
+    "# fe_2_features, fe_2_labels = feature_engineer_2(datasets)\n",
+    "# for name, dataset in fe_2_features.items():\n",
+    "#     display(dataset)"
    ]
   },
   {
@@ -3482,375 +3482,16 @@
       "Accuracy: 54.31 (+/- 1.01) [Ensemble]\n",
       "\n",
       "Feature Engineering 2 results for NASDAQ:\n",
-      "Accuracy: 54.64 (+/- 2.17) [SVM]\n"
+      "Accuracy: 54.64 (+/- 2.17) [SVM]\n",
+      "Accuracy: 50.06 (+/- 4.12) [KNN]\n",
+      "Accuracy: 55.70 (+/- 0.41) [Neural Network]\n",
+      "Accuracy: 48.26 (+/- 1.84) [AdaBoost]\n",
+      "Accuracy: 55.66 (+/- 0.40) [Naive Bayes]\n"
      ]
     }
    ],
    "source": [
     "fe_2_results = test_feature_engineering(\"Feature Engineering 2\", feature_engineer_2, datasets, trainers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# preprocess data\n",
-    "def process_data(target_dataset, dataset_label1, dataset_label2, label1, label2):\n",
-    "    data_processed = target_dataset.drop(['Date', 'TEDSpread', 'EFFR'],axis=1)\n",
-    "    labels1 = dataset_label1.iloc[0:, 1]\n",
-    "    labels2 = dataset_label2.iloc[0:, 1]\n",
-    "    data_processed[label1] = labels1\n",
-    "    data_processed[label1] = data_processed[label1].shift(periods=1, fill_value=-1)\n",
-    "    data_processed[label2] = labels2\n",
-    "    data_processed[label2] = data_processed[label2].shift(periods=1, fill_value=-1)\n",
-    "    data_processed = data_processed.iloc[1: , :]\n",
-    "    return data_processed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1       1\n",
-       "2       0\n",
-       "3       1\n",
-       "4       0\n",
-       "5       0\n",
-       "       ..\n",
-       "2443    1\n",
-       "2444    0\n",
-       "2445    0\n",
-       "2446    1\n",
-       "2447    0\n",
-       "Name: LABEL, Length: 2447, dtype: int64"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Open</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>Volume</th>\n",
-       "      <th>InterestRate</th>\n",
-       "      <th>ExchangeRate</th>\n",
-       "      <th>VIX</th>\n",
-       "      <th>Gold</th>\n",
-       "      <th>Oil</th>\n",
-       "      <th>SP500</th>\n",
-       "      <th>NASDAQ</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>12651.66992</td>\n",
-       "      <td>12696.29004</td>\n",
-       "      <td>12555.16992</td>\n",
-       "      <td>12608.91992</td>\n",
-       "      <td>232760000.0</td>\n",
-       "      <td>1.72</td>\n",
-       "      <td>1.5618</td>\n",
-       "      <td>23.43</td>\n",
-       "      <td>893.50</td>\n",
-       "      <td>104.83</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>12605.83008</td>\n",
-       "      <td>12675.12012</td>\n",
-       "      <td>12527.75000</td>\n",
-       "      <td>12626.03027</td>\n",
-       "      <td>183870000.0</td>\n",
-       "      <td>1.70</td>\n",
-       "      <td>1.5667</td>\n",
-       "      <td>23.21</td>\n",
-       "      <td>898.25</td>\n",
-       "      <td>103.92</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>12626.03027</td>\n",
-       "      <td>12688.48047</td>\n",
-       "      <td>12528.16016</td>\n",
-       "      <td>12609.41992</td>\n",
-       "      <td>181260000.0</td>\n",
-       "      <td>1.67</td>\n",
-       "      <td>1.5735</td>\n",
-       "      <td>22.45</td>\n",
-       "      <td>905.25</td>\n",
-       "      <td>106.09</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>12612.58984</td>\n",
-       "      <td>12733.66016</td>\n",
-       "      <td>12583.28027</td>\n",
-       "      <td>12612.42969</td>\n",
-       "      <td>198070000.0</td>\n",
-       "      <td>1.62</td>\n",
-       "      <td>1.5713</td>\n",
-       "      <td>22.42</td>\n",
-       "      <td>914.70</td>\n",
-       "      <td>108.91</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>12602.66016</td>\n",
-       "      <td>12607.29981</td>\n",
-       "      <td>12525.79981</td>\n",
-       "      <td>12576.44043</td>\n",
-       "      <td>197200000.0</td>\n",
-       "      <td>1.71</td>\n",
-       "      <td>1.5705</td>\n",
-       "      <td>22.36</td>\n",
-       "      <td>921.00</td>\n",
-       "      <td>108.54</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2443</th>\n",
-       "      <td>23995.17969</td>\n",
-       "      <td>24108.47070</td>\n",
-       "      <td>23509.06055</td>\n",
-       "      <td>23533.19922</td>\n",
-       "      <td>482550000.0</td>\n",
-       "      <td>0.54</td>\n",
-       "      <td>1.2360</td>\n",
-       "      <td>24.87</td>\n",
-       "      <td>1342.35</td>\n",
-       "      <td>65.80</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2444</th>\n",
-       "      <td>23825.74023</td>\n",
-       "      <td>24232.30078</td>\n",
-       "      <td>23741.22070</td>\n",
-       "      <td>24202.59961</td>\n",
-       "      <td>479540000.0</td>\n",
-       "      <td>0.52</td>\n",
-       "      <td>1.2440</td>\n",
-       "      <td>21.03</td>\n",
-       "      <td>1348.40</td>\n",
-       "      <td>65.49</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2445</th>\n",
-       "      <td>24276.61914</td>\n",
-       "      <td>24446.22070</td>\n",
-       "      <td>23708.73047</td>\n",
-       "      <td>23857.71094</td>\n",
-       "      <td>524480000.0</td>\n",
-       "      <td>0.52</td>\n",
-       "      <td>1.2410</td>\n",
-       "      <td>22.50</td>\n",
-       "      <td>1350.65</td>\n",
-       "      <td>65.21</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2446</th>\n",
-       "      <td>23883.08008</td>\n",
-       "      <td>24092.47070</td>\n",
-       "      <td>23728.66992</td>\n",
-       "      <td>23848.41992</td>\n",
-       "      <td>530040000.0</td>\n",
-       "      <td>0.49</td>\n",
-       "      <td>1.2351</td>\n",
-       "      <td>22.87</td>\n",
-       "      <td>1341.05</td>\n",
-       "      <td>64.30</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2447</th>\n",
-       "      <td>23949.17969</td>\n",
-       "      <td>24314.30078</td>\n",
-       "      <td>23928.13086</td>\n",
-       "      <td>24103.10938</td>\n",
-       "      <td>463550000.0</td>\n",
-       "      <td>0.47</td>\n",
-       "      <td>1.2297</td>\n",
-       "      <td>19.97</td>\n",
-       "      <td>1323.90</td>\n",
-       "      <td>64.87</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2447 rows × 12 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             Open         High          Low        Close       Volume  \\\n",
-       "1     12651.66992  12696.29004  12555.16992  12608.91992  232760000.0   \n",
-       "2     12605.83008  12675.12012  12527.75000  12626.03027  183870000.0   \n",
-       "3     12626.03027  12688.48047  12528.16016  12609.41992  181260000.0   \n",
-       "4     12612.58984  12733.66016  12583.28027  12612.42969  198070000.0   \n",
-       "5     12602.66016  12607.29981  12525.79981  12576.44043  197200000.0   \n",
-       "...           ...          ...          ...          ...          ...   \n",
-       "2443  23995.17969  24108.47070  23509.06055  23533.19922  482550000.0   \n",
-       "2444  23825.74023  24232.30078  23741.22070  24202.59961  479540000.0   \n",
-       "2445  24276.61914  24446.22070  23708.73047  23857.71094  524480000.0   \n",
-       "2446  23883.08008  24092.47070  23728.66992  23848.41992  530040000.0   \n",
-       "2447  23949.17969  24314.30078  23928.13086  24103.10938  463550000.0   \n",
-       "\n",
-       "      InterestRate  ExchangeRate    VIX     Gold     Oil  SP500  NASDAQ  \n",
-       "1             1.72        1.5618  23.43   893.50  104.83      0       0  \n",
-       "2             1.70        1.5667  23.21   898.25  103.92      1       1  \n",
-       "3             1.67        1.5735  22.45   905.25  106.09      1       1  \n",
-       "4             1.62        1.5713  22.42   914.70  108.91      1       0  \n",
-       "5             1.71        1.5705  22.36   921.00  108.54      0       0  \n",
-       "...            ...           ...    ...      ...     ...    ...     ...  \n",
-       "2443          0.54        1.2360  24.87  1342.35   65.80      0       0  \n",
-       "2444          0.52        1.2440  21.03  1348.40   65.49      1       1  \n",
-       "2445          0.52        1.2410  22.50  1350.65   65.21      0       0  \n",
-       "2446          0.49        1.2351  22.87  1341.05   64.30      0       0  \n",
-       "2447          0.47        1.2297  19.97  1323.90   64.87      1       1  \n",
-       "\n",
-       "[2447 rows x 12 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# DOW30\n",
-    "data_dow_processed = process_data(datasets[\"DOW30\"], datasets[\"SP500\"], datasets[\"NASDAQ\"], \"SP500\", \"NASDAQ\")\n",
-    "data_dow_Y = data_dow_processed['LABEL']\n",
-    "data_dow_X = data_dow_processed.drop(['LABEL'],axis=1)\n",
-    "display(data_dow_Y)\n",
-    "display(data_dow_X)\n",
-    "# svm_grid_search = SVM_trainer(data_dow_X, data_dow_Y)\n",
-    "# knn_grid_search = KNN_trainer(data_dow_X, data_dow_Y)\n",
-    "# nn_grid_search = NN_trainer(data_dow_X, data_dow_Y)\n",
-    "# ensamble_trainer(svm_grid_search, knn_grid_search, nn_grid_search, data_dow_X, data_dow_Y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Results\n",
-    "    Accuracy: 0.53 (+/- 0.01) [SVM]\n",
-    "    Accuracy: 0.51 (+/- 0.03) [KNN]\n",
-    "    Accuracy: 0.52 (+/- 0.03) [Neural Network]\n",
-    "    Accuracy: 0.53 (+/- 0.02) [Ensemble]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# SP500\n",
-    "data_sp_processed = process_data(data_sp, data_dow, data_nas, \"DOW30\", \"NASDAQ\")\n",
-    "data_sp_Y = data_sp_processed['LABEL']\n",
-    "data_sp_X = data_sp_processed.drop(['LABEL'],axis=1)\n",
-    "svm_grid_search = SVM_trainer(data_sp_X, data_sp_Y)\n",
-    "knn_grid_search = KNN_trainer(data_sp_X, data_sp_Y)\n",
-    "nn_grid_search = NN_trainer(data_sp_X, data_sp_Y)\n",
-    "ensamble_trainer(svm_grid_search, knn_grid_search, nn_grid_search, data_sp_X, data_sp_Y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Results\n",
-    "    Accuracy: 0.55 (+/- 0.00) [SVM]\n",
-    "    Accuracy: 0.50 (+/- 0.02) [KNN]\n",
-    "    Accuracy: 0.54 (+/- 0.01) [Neural Network]\n",
-    "    Accuracy: 0.54 (+/- 0.01) [Ensemble]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# NASDAQ\n",
-    "data_nas_processed = process_data(data_nas, data_dow, data_sp, \"DOW30\", \"SP500\")\n",
-    "data_nas_Y = data_nas_processed['LABEL']\n",
-    "data_nas_X = data_nas_processed.drop(['LABEL'],axis=1)\n",
-    "SVM_trainer(data_nas_X, data_nas_Y)\n",
-    "svm_grid_search = SVM_trainer(data_nas_X, data_nas_Y)\n",
-    "knn_grid_search = KNN_trainer(data_nas_X, data_nas_Y)\n",
-    "nn_grid_search = NN_trainer(data_nas_X, data_nas_Y)\n",
-    "ensamble_trainer(svm_grid_search, knn_grid_search, nn_grid_search, data_nas_X, data_nas_Y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Results\n",
-    "    Accuracy: 0.55 (+/- 0.02) [SVM]\n",
-    "    Accuracy: 0.50 (+/- 0.04) [KNN]\n",
-    "    Accuracy: 0.56 (+/- 0.00) [Neural Network]\n",
-    "    Accuracy: 0.54 (+/- 0.02) [Ensemble]"
    ]
   },
   {
@@ -3910,107 +3551,6 @@
    "outputs": [],
    "source": [
     "fe_3_results = test_feature_engineering(\"Feature Engineering 3\", feature_engineer_3, datasets, trainers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# preprocess data\n",
-    "def process_data_2(target_dataset, dataset_label1, dataset_label2, label1, label2):\n",
-    "    data_processed = target_dataset.drop(['Date'],axis=1)\n",
-    "    labels1 = dataset_label1.iloc[0:, 1]\n",
-    "    labels2 = dataset_label2.iloc[0:, 1]\n",
-    "    data_processed[label1] = labels1\n",
-    "    data_processed[label1] = data_processed[label1].shift(periods=1, fill_value=-1)\n",
-    "    data_processed[label2] = labels2\n",
-    "    data_processed[label2] = data_processed[label2].shift(periods=1, fill_value=-1)\n",
-    "    data_processed = data_processed.iloc[1: , :]\n",
-    "    return data_processed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# DOW30\n",
-    "data_dow_processed = process_data_2(data_dow, data_sp, data_nas, \"SP500\", \"NASDAQ\")\n",
-    "data_dow_Y = data_dow_processed['LABEL']\n",
-    "data_dow_X = data_dow_processed.drop(['LABEL'],axis=1)\n",
-    "svm_grid_search = SVM_trainer(data_dow_X, data_dow_Y)\n",
-    "knn_grid_search = KNN_trainer(data_dow_X, data_dow_Y)\n",
-    "nn_grid_search = NN_trainer(data_dow_X, data_dow_Y)\n",
-    "ensamble_trainer(svm_grid_search, knn_grid_search, nn_grid_search, data_dow_X, data_dow_Y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Results\n",
-    "    Accuracy: 0.54 (+/- 0.01) [SVM]\n",
-    "    Accuracy: 0.50 (+/- 0.03) [KNN]\n",
-    "    Accuracy: 0.53 (+/- 0.03) [Neural Network]\n",
-    "    Accuracy: 0.53 (+/- 0.02) [Ensemble]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# SP500\n",
-    "data_sp_processed = process_data_2(data_sp, data_dow, data_nas, \"DOW30\", \"NASDAQ\")\n",
-    "data_sp_Y = data_sp_processed['LABEL']\n",
-    "data_sp_X = data_sp_processed.drop(['LABEL'],axis=1)\n",
-    "svm_grid_search = SVM_trainer(data_sp_X, data_sp_Y)\n",
-    "knn_grid_search = KNN_trainer(data_sp_X, data_sp_Y)\n",
-    "nn_grid_search = NN_trainer(data_sp_X, data_sp_Y)\n",
-    "ensamble_trainer(svm_grid_search, knn_grid_search, nn_grid_search, data_sp_X, data_sp_Y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Results\n",
-    "    Accuracy: 0.55 (+/- 0.00) [SVM]\n",
-    "    Accuracy: 0.50 (+/- 0.02) [KNN]\n",
-    "    Accuracy: 0.53 (+/- 0.03) [Neural Network]\n",
-    "    Accuracy: 0.53 (+/- 0.02) [Ensemble]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# NASDAQ\n",
-    "data_nas_processed = process_data_2(data_nas, data_dow, data_sp, \"DOW30\", \"SP500\")\n",
-    "data_nas_Y = data_nas_processed['LABEL']\n",
-    "data_nas_X = data_nas_processed.drop(['LABEL'],axis=1)\n",
-    "SVM_trainer(data_nas_X, data_nas_Y)\n",
-    "svm_grid_search = SVM_trainer(data_nas_X, data_nas_Y)\n",
-    "knn_grid_search = KNN_trainer(data_nas_X, data_nas_Y)\n",
-    "nn_grid_search = NN_trainer(data_nas_X, data_nas_Y)\n",
-    "ensamble_trainer(svm_grid_search, knn_grid_search, nn_grid_search, data_nas_X, data_nas_Y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Results\n",
-    "    Accuracy: 0.55 (+/- 0.02) [SVM]\n",
-    "    Accuracy: 0.48 (+/- 0.05) [KNN]\n",
-    "    Accuracy: 0.55 (+/- 0.01) [Neural Network]\n",
-    "    Accuracy: 0.54 (+/- 0.02) [Ensemble]"
    ]
   },
   {
