--- a/project.ipynb
+++ b/project.ipynb
@@ -1628,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1650,7 +1650,7 @@
     "    \n",
     "    # Calculates number of rows needed to fit all of the plots in two columns.\n",
     "    rows = ceil(len(baseline.columns) / 2)\n",
-    "    fig, axs = plt.subplots(rows, 2, figsize=(16, rows * 5))\n",
+    "    fig, axs = plt.subplots(rows, 2, figsize=(FIGURE_WIDTH, rows * 5))\n",
     "    \n",
     "    # Plots each column, iterating row first and then column second using integer division and mod.\n",
     "    for i, column in enumerate(baseline.columns):\n",
@@ -1659,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
@@ -2525,11 +2525,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def SVM_trainer():\n",
+    "def SVM_trainer() -> GridSearchCV:\n",
     "    \"\"\"\n",
     "    Creates a 5 fold cross validation support vector machine classifier.\n",
     "    \n",
@@ -2580,12 +2580,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [],
    "source": [
     "# KNN\n",
-    "def KNN_trainer():\n",
+    "def KNN_trainer() -> GridSearchCV:\n",
     "    \"\"\"\n",
     "    Creates a 5 fold cross validation K-nearest neighbor classifier.\n",
     "    \n",
@@ -2634,12 +2634,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Neural Network\n",
-    "def NN_trainer():\n",
+    "def NN_trainer() -> GridSearchCV:\n",
     "    \"\"\"\n",
     "    Creates a 5 fold cross validation neural network classifier.\n",
     "    \n",
@@ -2674,11 +2674,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def AB_Trainer():\n",
+    "def AB_Trainer() -> GridSearchCV:\n",
     "    \"\"\"\n",
     "    Creates a 5 fold cross validation AdaBoost decision stump classifier.\n",
     "    \n",
@@ -2712,11 +2712,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def NB_Trainer():\n",
+    "def NB_Trainer() -> GaussianNB:\n",
     "    \"\"\"\n",
     "    Creates a Naive Bayes classifier. Hyperparameter tuning is unnecessary since the classifier\n",
     "    does not have any hyperparameters, so 5 fold cross validation is also not needed.\n",
@@ -2746,13 +2746,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Ensemble must be the last classifier in the models list. \n",
     "# This is because it relies on all other models in order to be created.\n",
-    "def ensemble_trainer(models: Dict[str, Any]):\n",
+    "def ensemble_trainer(models: Dict[str, Any]) -> VotingClassifier:\n",
     "    \"\"\"\n",
     "    Creates a heterogenous ensemble voting classifier using all previous models.\n",
     "    \n",
@@ -2771,11 +2771,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_models(trainers: Callable[[], Any]):\n",
+    "def get_models(trainers: Callable[[], Any]) -> Dict[str, Any]:\n",
     "    \"\"\"\n",
     "    Generates a new model from each trainer.\n",
     "    \n",
@@ -3549,7 +3549,7 @@
     "        if not individual:\n",
     "            ax = axs[i // 2, i % 2]\n",
     "        else:\n",
-    "            fig, ax = plt.subplots(figsize=(16, 12))\n",
+    "            fig, ax = plt.subplots(figsize=(FIGURE_WIDTH, FIGURE_HEIGHT))\n",
     "        for name, result in formatted_results.items():\n",
     "            ax.bar(result[\"positions\"], result[\"means\"], width = bar_width,\n",
     "                   label=name, yerr=result[\"stds\"], capsize=2)\n",
