--- a/project.ipynb
+++ b/project.ipynb
@@ -2989,7 +2989,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We tried three different feature engineerings. "
+    "### We tried five different feature engineerings. "
    ]
   },
   {
@@ -3125,6 +3125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Results:\n",
     "    Feature Engineering 2 results for DOW30:\n",
     "    Accuracy: 53.37 (+/- 1.33) [SVM]\n",
     "    Accuracy: 51.08 (+/- 2.67) [KNN]\n",
@@ -3264,6 +3265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Results:\n",
     "    Feature Engineering 3 results for DOW30:\n",
     "    Accuracy: 54.03 (+/- 0.53) [SVM]\n",
     "    Accuracy: 49.94 (+/- 2.67) [KNN]\n",
@@ -3404,6 +3406,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Results:\n",
     "    Feature Engineering 4 results for DOW30:\n",
     "    Accuracy: 54.38 (+/- 0.19) [SVM]\n",
     "    Accuracy: 52.35 (+/- 2.95) [KNN]\n",
@@ -3551,6 +3554,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Results:\n",
     "    Feature Engineering 5 results for DOW30:\n",
     "    Accuracy: 53.72 (+/- 1.14) [SVM]\n",
     "    Accuracy: 50.70 (+/- 2.90) [KNN]\n",
@@ -3999,7 +4003,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
