last minute fixes

--- a/project.ipynb
+++ b/project.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,6 +61,7 @@
     "from sklearn.ensemble import AdaBoostClassifier, RandomForestClassifier, VotingClassifier\n",
     "from sklearn.utils._testing import ignore_warnings\n",
     "from sklearn.exceptions import ConvergenceWarning\n",
+    "from matplotlib import axes\n",
     "\n",
     "# Type annotations\n",
     "from typing import Any, Callable, Dict, List, Tuple"
@@ -262,11 +263,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def show_preview(datasets: Dict[str, pd.DataFrame]) -> None:\n",
+    "def show_preview(datasets: Dict[Data, pd.DataFrame]) -> None:\n",
     "    \"\"\"\n",
     "    Given a dictionary of DataFrames, loops through each and displays:\n",
     "        - the name of the data set\n",
@@ -289,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +796,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def show_features(datasets: Dict[str, pd.DataFrame]) -> None:\n",
+    "def show_features(datasets: Dict[Data, pd.DataFrame]) -> None:\n",
     "    \"\"\"\n",
     "    Given a dictionary of DataFrames, loops through each and displays:\n",
     "        - the name of the data set\n",
@@ -849,7 +850,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def show_class_balance(datasets: Dict[str, pd.DataFrame]) -> None:\n",
+    "def show_class_balance(datasets: Dict[Data, pd.DataFrame]) -> None:\n",
     "    \"\"\"\n",
     "    Given a dictionary of DataFrames, loops through each and displays:\n",
     "        - the name of the data set\n",
@@ -907,12 +908,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get stats on each attribute in DOW30\n",
-    "def show_statistics(datasets: Dict[str, pd.DataFrame]) -> None:\n",
+    "def show_statistics(datasets: Dict[Data, pd.DataFrame]) -> None:\n",
     "    \"\"\"\n",
     "    Given a dictionary of DataFrames, loops through each and displays:\n",
     "        - the name of the data set\n",
@@ -1589,12 +1590,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Data Visualization Helper Function\n",
-    "def box_plot(datasets, col_name, ax=None) -> None:\n",
+    "def box_plot(datasets: Dict[Data, pd.DataFrame], col_name: str, ax: axes.Axes=None) -> None:\n",
     "    \"\"\"\n",
     "    Given a dictionary of DataFrames and a column to compare, loops through each and displays:\n",
     "        - a box plot comparing the data sets for that column\n",
@@ -3193,8 +3194,8 @@
     "            # Add the data set labels of each of other data sets. Shifts the labels down one\n",
     "            # so that each data point now also contains the label of the previous data point.\n",
     "            if name != other_name:\n",
-    "                features[other_name] = other_dataset_labels\n",
-    "                features[other_name] = features[other_name].shift(periods=1, fill_value=-1)\n",
+    "                features[other_name.value] = other_dataset_labels\n",
+    "                features[other_name.value] = features[other_name.value].shift(periods=1, fill_value=-1)\n",
     "        \n",
     "        # Drop the first data point since it does not have a previous label\n",
     "        features.drop(features.index[[0]], inplace=True)\n",
@@ -3582,12 +3583,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def feature_engineer_5(datasets: Dict[str, pd.DataFrame]\n",
-    "                      ) -> Tuple[Dict[str, pd.DataFrame], Dict[str, pd.DataFrame]]:\n",
+    "def feature_engineer_5(datasets: Dict[Data, pd.DataFrame]\n",
+    "                      ) -> Tuple[Dict[Data, pd.DataFrame], Dict[Data, pd.DataFrame]]:\n",
     "    \"\"\"\n",
     "    Formats the data sets based on the 2nd feature engineering. Adds all engineered features ---\n",
     "    Previous Day's Label, MACD, Accumulation/Distribution, Aroon, and Stochastic Oscillator ---\n",
@@ -3627,8 +3628,8 @@
     "            # Add the data set labels of each of other data sets. Shifts the labels down one\n",
     "            # so that each data point now also contains the label of the previous data point.\n",
     "            if name != other_name:\n",
-    "                features[other_name] = other_dataset_labels\n",
-    "                features[other_name] = features[other_name].shift(periods=1, fill_value=-1)\n",
+    "                features[other_name.value] = other_dataset_labels\n",
+    "                features[other_name.value] = features[other_name.value].shift(periods=1, fill_value=-1)\n",
     "        \n",
     "        # Drop the first 26 data points since they does not have a moving average\n",
     "        features.drop(features.index[range(26)], inplace=True)\n",
@@ -3973,7 +3974,7 @@
     "- For SP500, feature engineering 5 performs the best. Among all methods, Naive Bayes generates the best accuracy, 54.83%.\n",
     "- For NASDAQ, feature engineering 4 and 5 both perform the best. Among all methods, SVM and Neural Network both generate the best accuracies, 55.74%.\n",
     "\n",
-    "Overall, SVM performs the best and KNN performs the worst. In every case, the ensemble model did not perform the best, and one of the subclassifiers performed better. Some reasons why this would happen is that our models were not diverse or accurate enough. Often times, KNN would drag the accuracy down, and based on the accuracies, the nerual network and the Naive Bayes classifier would sometimes perform very similarly, signifying that our models were not very diverse. Overall, The sub-classifiers and the primary model didn’t work very well with our datasets in general. Because the stock market price is influenced by a complex set of factors, more data, more features and better feature engineering should be used based on professional knowledge in order to build a better model."
+    "Overall, SVM performed the best and KNN performed the worst. In every case, the ensemble model did not perform the best, and one of the subclassifiers performed better. Some reasons why this would happen is that our models were not diverse or accurate enough. Often times, KNN would drag the accuracy down, and based on the accuracies, the neural network and the Naive Bayes classifier would sometimes perform very similarly, signifying that our models were not very diverse. Overall, The sub-classifiers and the primary model didn’t work very well with our data sets in general. Because the stock market price is influenced by a complex set of factors, more data, more features and better feature engineering should be used based on professional knowledge in order to build a better model."
    ]
   },
   {
@@ -4003,7 +4004,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
